[gd_scene load_steps=5 format=3 uid="uid://cvuqlb7upqf6o"]

[ext_resource type="Script" path="res://Main.gd" id="1_g46e7"]
[ext_resource type="PackedScene" uid="uid://dwib58s6gj4mf" path="res://player2.tscn" id="2_fdhs6"]
[ext_resource type="PackedScene" uid="uid://df74twkh5djil" path="res://hud.tscn" id="2_ucm7d"]
[ext_resource type="PackedScene" uid="uid://dolbxgpicb72h" path="res://guard_2.tscn" id="3_bw0sh"]

[node name="Main" type="Node"]
script = ExtResource("1_g46e7")

[node name="Player2" parent="." instance=ExtResource("2_fdhs6")]

[node name="Guard2" parent="." instance=ExtResource("3_bw0sh")]

[node name="StartTimer" type="Timer" parent="."]

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(550, 320)

[node name="HUD" parent="." instance=ExtResource("2_ucm7d")]

[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="play_game" from="HUD" to="." method="play_game"]
